Mejora interfaz en prestamos cambios en el metodo crear prestamo

--- a/Views/Prestamos/Index.cshtml
+++ b/Views/Prestamos/Index.cshtml
@@ -33,7 +33,8 @@
                     <!-- Estadísticas Rápidas -->
                     <div class="row mb-4 g-3" id="estadisticas-prestamos">
                         <div class="col-md-3">
-                            <div class="stats-card bg-primary text-white h-100">
+                            <!-- Antes: class="stats-card bg-primary text-white h-100" -->
+                            <div class="stats-card stats-card--totales h-100">
                                 <div class="stats-icon">
                                     <i class="fas fa-book-open"></i>
                                 </div>
